modif animation apparition menu

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="presentation">
                 <h1 class="presentation__heading">Réservez le menu qui vous convient</h1>
                 <p class="presentation__detail">Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-                <button type="button" class="presentation__btn">Explorer nos restaurants</button>
+                <button type="button" class="presentation__btn" href="#Restaurants">Explorer nos restaurants</button>
             </div>
             <!--FONCTIONNNEMENT-->
             <div class="operation">
@@ -71,13 +71,13 @@
                 <div class="restaurants__card">
                     <article class="card">
                         <div class="card__image">
-                            <a href="/restaurants/palette.html">
+                            <a href="./restaurants/palette.html">
                                 <img src="./assets/images/restaurants/Palette_du_gout.jpg" alt="Photo d'un plat proposé par le restaurant La palette du goût">
                                 <div class="box-new">Nouveau</div>
                             </a>
                         </div>
                         <div class="card__content">
-                            <a href="/restaurants/palette.html">
+                            <a href="./restaurants/palette.html">
                                 <h3>La palette du goût</h3>
                                 <p>Ménilmontant</p>
                             </a>
@@ -92,13 +92,13 @@
                     </article>
                     <article class="card">
                         <div class="card__image">
-                            <a href="/restaurants/note-enchantee.html">
+                            <a href="./restaurants/note-enchantee.html">
                                 <img src="./assets/images/restaurants/Note_enchantee.jpg" alt="Photo d'un plat proposé par le restaurant La note enchantée">
                                 <div class="box-new">Nouveau</div>
                             </a>
                         </div>
                         <div class="card__content">
-                            <a href="/restaurants/note-enchantee.html">
+                            <a href="./restaurants/note-enchantee.html">
                                 <h3>La note enchantée</h3>
                                 <p>Charonne</p>
                             </a>
@@ -113,12 +113,12 @@
                     </article>
                     <article class="card">
                         <div class="card__image">
-                            <a href="/restaurants/a-la-francaise.html">
+                            <a href="./restaurants/a-la-francaise.html">
                                 <img src="./assets/images/restaurants/a_la_francaise.jpg" alt="Photo d'un plat proposé par le restaurant À la française">
                             </a>
                         </div>
                         <div class="card__content">
-                            <a href="/restaurants/a-la-francaise.html">
+                            <a href="./restaurants/a-la-francaise.html">
                                 <h3>À la française</h3>
                                 <p>Cité Rouge</p>
                             </a>
@@ -133,12 +133,12 @@
                     </article>
                     <article class="card">
                         <div class="card__image">
-                            <a href="/restaurants/delice-des-sens.html">
+                            <a href="./restaurants/delice-des-sens.html">
                                 <img src="./assets/images/restaurants/delice_des_sens.jpg" alt="Photo d'un plat proposé par le restaurant Le délice des sens">
                             </a>
                         </div>
                         <div class="card__content">
-                            <a href="/restaurants/delice-des-sens.html">
+                            <a href="./restaurants/delice-des-sens.html">
                                 <h3>Le délice des sens</h3>
                                 <p>Folie-Méricourt</p>
                             </a>
