--- a/restaurants/a-la-francaise.html
+++ b/restaurants/a-la-francaise.html
@@ -16,11 +16,11 @@
     <div class="main-container main-container--color">
         <!--HEADER-->
         <header class="header">
-            <a class="header__back" href="/index.html"><i class="fa-solid fa-arrow-left"></i></a>
-            <img class="header__logo" src="/assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood Paris">
+            <a class="header__back" href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+            <img class="header__logo" src="../assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood Paris">
         </header>
         <div class="image-hero">
-            <img src="/assets/images/restaurants/a_la_francaise.jpg" alt="Photo d'un plat proposé par le restaurant À la française">
+            <img src="../assets/images/restaurants/a_la_francaise.jpg" alt="Photo d'un plat proposé par le restaurant À la française">
         </div>
         <!--CONTENU-->
         <main class="contenu">
