--- a/restaurants/note-enchantee.html
+++ b/restaurants/note-enchantee.html
@@ -16,11 +16,11 @@
     <div class="main-container main-container--color">
         <!--HEADER-->
         <header class="header">
-            <a class="header__back" href="/index.html"><i class="fa-solid fa-arrow-left"></i></a>
-            <img class="header__logo" src="/assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood Paris">
+            <a class="header__back" href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+            <img class="header__logo" src="../assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood Paris">
         </header>
         <div class="image-hero">
-            <img src="/assets/images/restaurants/Note_enchantee.jpg" alt="Photo d'un plat proposé par le restaurant La note enchantée">
+            <img src="../assets/images/restaurants/Note_enchantee.jpg" alt="Photo d'un plat proposé par le restaurant La note enchantée">
         </div>
         <!--CONTENU-->
         <main class="contenu">
