modif bouton en a

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="presentation">
                 <h1 class="presentation__heading">Réservez le menu qui vous convient</h1>
                 <p class="presentation__detail">Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-                <button type="button" class="presentation__btn" href="#Restaurants">Explorer nos restaurants</button>
+                <a class="presentation__btn" href="#Restaurants">Explorer nos restaurants</a>
             </div>
             <!--FONCTIONNNEMENT-->
             <div class="operation">
