--- a/restaurants/delice-des-sens.html
+++ b/restaurants/delice-des-sens.html
@@ -152,7 +152,7 @@
                         </div>
                     </div>
                 </section>
-                <button type="submit" class="presentation__btn">Commander</button>
+                <button type="submit" class="presentation__btn presentation__btn--width">Commander</button>
             </div>
         </main>
     </div>
