--- a/restaurants/palette.html
+++ b/restaurants/palette.html
@@ -175,7 +175,7 @@
                     <a href="#">Mentions légales</a>
                 </li>
                 <li class="item4">
-                    <a href="#">Contact</a>
+                    <a href="mailto:name@email.com">Contact</a>
                 </li>
             </ul>
         </section>
