--- a/restaurants/delice-des-sens.html
+++ b/restaurants/delice-des-sens.html
@@ -46,7 +46,7 @@
                             <p>25€</p>
                         </div>
                         <div class="check">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="menu-section__card menu-section__card--2">
@@ -58,7 +58,7 @@
                             <p>35€</p>
                         </div>
                         <div hidden class="check">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="menu-section__card menu-section__card--3">
@@ -70,7 +70,7 @@
                             <p>20€</p>
                         </div>
                         <div hidden class="check">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                 </section>
@@ -85,7 +85,7 @@
                             <p>40€</p>
                         </div>
                         <div hidden class="check">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="menu-section__card menu-section__card--2">
@@ -97,7 +97,7 @@
                             <p>35€</p>
                         </div>
                         <div hidden class="check">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="menu-section__card menu-section__card--3">
@@ -109,7 +109,7 @@
                             <p>44€</p>
                         </div>
                         <div hidden class="check">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                 </section>
@@ -124,7 +124,7 @@
                             <p>18€</p>
                         </div>
                         <div hidden class="check">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="menu-section__card menu-section__card--2">
@@ -136,7 +136,7 @@
                             <p>22€</p>
                         </div>
                         <div hidden class="check">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="menu-section__card menu-section__card--3">
@@ -148,7 +148,7 @@
                             <p>23€</p>
                         </div>
                         <div hidden class="check">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                 </section>
